2006-12-17  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-gstreamer version 0.9.90 ==

2006-12-17  Andy Wingo  <wingo@pobox.com>

	* VERSION: Bumped to 0.9.90.

2006-12-17  Andy Wingo  <wingo@pobox.com>

	* guile-gnome-gstreamer.pc.in (Requires): 
	* guile-gnome-gstreamer-uninstalled.pc.in (Requires): Updates
	platform requirement, but not sure where this gets used.

	* gnome/overrides/Makefile.am (module_DATA): Add the type-ignores
	to the dist.

	* gnome/gstreamer.scm (make): Update for new 0.10 plugin/registry
	API.

	* examples/gstreamer/vorbisplay.scm: Updated for newer API. Works
	with newest guile-gnome from bzr and g-wrap with an extra-special
	patch.

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gstreamer-support.h
	* gnome/gw/gstreamer-support.c
	(scm_gst_mini_object_primitive_create): New function, used in
	<gst-mini-object>'s initialize method.
	(scm_init_gstreamer): Register miniobject ref/unref functions, and
	do the work that was in initializations-cg.

	* gnome/gw/gstreamer-spec.scm (initializations-cg): Instead of
	putting a lot of C code here, just call scm_init_gstreamer in the
	support file.

	* gnome/gstreamer.scm (initialize): Define the initialize method
	on miniobjects, allowing you to (make <gst-buffer>), which is
	neat.

	* gnome/defs/gstreamer.defs (type-ignores): 
	* gnome/defs/Makefile.am (gstreamer):
	* gnome/overrides/gstreamer.defs-type-ignores: Add type-ignores
	file, but empty for now.

2006-12-09  Andy Wingo  <wingo@pobox.com>

	* gnome/overrides/gstreamer.defs (gst_caps_new_empty)
	(gst_caps_new_any): These construct GstCaps, so we take their ref.
	(set-get-function, set-link-function): => set-getrange-function,
	set-setcaps-function.
	(gst-structure-from-string): Wrap without the pointer-to-finish
	argument, which doesn't map well to scheme.

	* gnome/gw/gstreamer-support.h: 
	* gnome/gw/gstreamer-support.c: 
	* gnome/gw/gstreamer-spec.scm (initialize): Add wrap/unwrappers