@@ -219,6 +219,20 @@
   )
 )
 
+;; GstMessage
+
+(define-method get-type
+  (of-object "GstMessage")
+  (c-name "_wrap_gst_message_get_type")
+  (overrides "gst_message_get_type")
+  (return-type "GstMessageType"))
+
+(define-method get-src
+  (of-object "GstMessage")
+  (c-name "_wrap_gst_message_get_src")
+  (overrides "gst_message_get_src")
+  (return-type "GstObject*"))
+
 ;; GstObject
 
 (define-method set_name
@@ -455,7 +469,8 @@
              "gst_marshal_*"
              "gst_value_*"
              "gst_mini_object_*"
-             "gst_param_spec_*")
+             "gst_param_spec_*"
+             "gst_message_parse_*")
 
 (ignore "gst_buffer_new_and_alloc"
         "gst_element_class_install_std_props"
